<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".View.Desgin.Fragments.HomeFragment">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300ssp"
        android:layout_margin="@dimen/_10ssp"
        android:background="@drawable/selector3"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/logo_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="@dimen/_15ssp"
        app:shapeAppearanceOverlay="@style/RoundedSquare" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_teach"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:height="@dimen/btn_height"
        android:background="@drawable/selector1"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/teachers"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/_28ssp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/add_stu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_stu"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/selector2"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/add_student"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/show_teac_tbl"
        android:layout_marginBottom="@dimen/_28ssp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_teach" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_teac_tbl"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:background="@drawable/selector3"
        android:text="@string/Courses"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/_28ssp"

        app:layout_constraintBottom_toTopOf="@+id/show_teach_tbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_stu" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_teach_tbl"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btn_height"
        android:layout_marginBottom="@dimen/_28ssp"
        android:width="@dimen/btn_width"
        android:background="@drawable/selector4"
        android:text="@string/show_teacher_table"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_teac_tbl" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome"
        android:textColor="@color/primary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="267dp"
        android:layout_height="73dp"
        android:layout_marginTop="28dp"
        android:foregroundGravity="center_horizontal"
        android:text="@string/admin_guide"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>