<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".View.Desgin.Fragments.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/mForgetPasswordIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/background_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mEmailtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="44dp"
        android:text="@string/email"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mForgetPasswordIV" />

    <EditText
        android:id="@+id/mEnterEmailEt"
        android:layout_width="300dp"
        android:layout_height="@dimen/_40ssp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:padding="@dimen/_10ssp"
        android:background="@drawable/edit_text_forget_password"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColorHint="#808382"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mEmailtv" />

    <Button
        android:id="@+id/mSubmitForgetPasswordBtn"
        android:layout_width="300dp"
        android:layout_height="@dimen/_40ssp"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        android:background="@drawable/button_forget_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mEnterEmailEt"
        app:layout_constraintTop_toBottomOf="@+id/mEnterEmailEt"
        app:layout_constraintVertical_bias="0.075" />
</androidx.constraintlayout.widget.ConstraintLayout>
