<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/mBackView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_10ssp"
        android:layout_marginEnd="@dimen/_10ssp"
        android:background="@drawable/selector3"
        android:src="@drawable/logo_admin"
        app:layout_constraintBottom_toTopOf="@+id/mShowTeachersTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />


    <TextView
        android:id="@+id/mShowTeachersTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/teachers"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/mAddTeacherTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mBackView" />

    <TextView
        android:id="@+id/mAddTeacherTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_5ssp"
        android:layout_marginEnd="@dimen/_15ssp"
        android:text="@string/add_new_teacher"
        android:textAlignment="textEnd"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/mTeacherList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mShowTeachersTv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mTeacherList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_15ssp"
        android:paddingStart="@dimen/_5ssp"
        android:paddingEnd="@dimen/_5ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mAddTeacherTv"
        tools:listitem="@layout/list_item_teacher_view" />

    <ProgressBar
        android:id="@+id/mTeacherListProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mTeacherList"
        app:layout_constraintEnd_toEndOf="@+id/mTeacherList"
        app:layout_constraintStart_toStartOf="@+id/mTeacherList"
        app:layout_constraintTop_toTopOf="@+id/mTeacherList" />

    <TextView
        android:id="@+id/mNoTeachers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_teachers_yet"
        android:textColor="@color/gray"
        android:textSize="@dimen/_15ssp"
        android:textStyle="italic|bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mTeacherList"
        app:layout_constraintEnd_toEndOf="@+id/mTeacherList"
        app:layout_constraintStart_toStartOf="@+id/mTeacherList"
        app:layout_constraintTop_toTopOf="@+id/mTeacherList" />



</androidx.constraintlayout.widget.ConstraintLayout>