<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Desgin.Fragments.AddStudentsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/mlogoIV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300ssp"
                android:layout_margin="@dimen/_10ssp"
                android:background="@drawable/selector3"
                android:foregroundGravity="center_horizontal"
                android:src="@drawable/logo_admin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="@dimen/_15ssp"
                app:shapeAppearanceOverlay="@style/RoundedSquare" />

            <TextView
                android:id="@+id/mYeartv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15ssp"
                android:text="@string/year"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/mYearEt"
                app:layout_constraintTop_toBottomOf="@+id/mlogoIV" />

            <EditText
                android:id="@+id/mYearEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35ssp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_35ssp"
                android:background="@drawable/edit_text_forget_password"
                android:inputType="number"
                android:padding="@dimen/_10ssp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mYeartv" />

            <TextView
                android:id="@+id/mFirstIdtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20ssp"
                android:text="@string/first_id"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/mFirdtIdEt"
                app:layout_constraintTop_toBottomOf="@+id/mYearEt" />

            <EditText
                android:id="@+id/mFirdtIdEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35ssp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_35ssp"
                android:background="@drawable/edit_text_forget_password"
                android:inputType="number"
                android:padding="@dimen/_10ssp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mFirstIdtv" />

            <TextView
                android:id="@+id/mLastIdtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15ssp"
                android:text="Last ID"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/_15ssp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/mLastIdEt"
                app:layout_constraintTop_toBottomOf="@+id/mFirdtIdEt" />


            <EditText
                android:id="@+id/mLastIdEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35ssp"
                android:layout_marginTop="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_35ssp"
                android:background="@drawable/edit_text_forget_password"
                android:inputType="number"
                android:padding="@dimen/_10ssp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mLastIdtv" />

            <Button
                android:id="@+id/mSubmitForgetPasswordBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35ssp"
                android:layout_marginTop="@dimen/_20ssp"
                android:layout_marginEnd="@dimen/_35ssp"
                android:background="@drawable/button_forget_password"
                android:text="@string/add"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mLastIdEt"
                app:layout_constraintVertical_bias="0.075" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>